--- a/back/express-gen-ts/package.json
+++ b/back/express-gen-ts/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
@@ -39,11 +40,13 @@
     "jsonfile": "^6.1.0",
     "module-alias": "^2.2.3",
     "moment": "^2.30.1",
+    "mongoose": "^8.4.3",
     "morgan": "^1.10.0",
     "ts-command-line-args": "^2.5.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/find": "^0.2.4",
     "@types/fs-extra": "^11.0.4",
