--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -29,7 +29,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/canvasjs/dist/canvasjs.min.js"
+          ],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
