--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,11 @@
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.3",
     "@canvasjs/angular-charts": "^1.2.0",
+    "canvasjs": "^1.8.3",
+    "chart.js": "^4.4.3",
     "express": "^4.18.2",
     "moment": "^2.30.1",
+    "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
