--- a/back/express-gen-ts/package.json
+++ b/back/express-gen-ts/package.json
@@ -43,6 +43,8 @@
     "moment": "^2.30.1",
     "mongoose": "^8.4.3",
     "morgan": "^1.10.0",
+    "observable-mongo": "^2.3.17",
+    "socket.io": "^4.7.5",
     "ts-command-line-args": "^2.5.1"
   },
   "devDependencies": {
