--- a/back/express-gen-ts/package.json
+++ b/back/express-gen-ts/package.json
@@ -41,6 +41,7 @@
     "jsonfile": "^6.1.0",
     "module-alias": "^2.2.3",
     "moment": "^2.30.1",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.4.3",
     "morgan": "^1.10.0",
     "observable-mongo": "^2.3.17",
